finish learner skill ui and get data from API

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,15 +39,14 @@
             <Button
                 android:id="@+id/btn_submit"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:background="@android:color/white"
-                android:insetTop="0dp"
-                android:insetBottom="0dp"
-                android:text="SUBMIT"
-                android:textColor="@android:color/black"
+                android:background="@drawable/rounded_white_btn"
+                android:text="Submit"
+                android:textAllCaps="false"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/textView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/textView" />
