--- a/app/src/main/res/layout/skilliq_leaner_item.xml
+++ b/app/src/main/res/layout/skilliq_leaner_item.xml
@@ -8,8 +8,8 @@
         <import type="android.view.View" />
 
         <variable
-            name="hour"
-            type="io.github.manuelernesto.gadsleaderboard.data.model.LearnerHour" />
+            name="skill"
+            type="io.github.manuelernesto.gadsleaderboard.data.model.LearnerSkill" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -32,7 +32,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:picture="@{hour.badgeUrl}"
+                app:picture="@{skill.badgeUrl}"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="16dp"
-                android:text="@{hour.description()}"
+                android:text="@{skill.description()}"
                 app:layout_constraintBottom_toBottomOf="@+id/img"
                 app:layout_constraintStart_toStartOf="@+id/txt_name"
                 app:layout_constraintTop_toBottomOf="@+id/txt_name"
@@ -53,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:text="@{hour.name}"
+                android:text="@{skill.name}"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/img"
