--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
+        <item name="android:windowTranslucentStatus">true</item>
 
         <item name="android:fontFamily">@font/google_sans_regular</item>
         <item name="fontFamily">@font/google_sans_regular</item>
