refactoring and bug fix

--- a/app/src/main/res/layout/hour_learner_item.xml
+++ b/app/src/main/res/layout/hour_learner_item.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="hour"
-            type="io.github.manuelernesto.gadsleaderboard.data.model.LearnerHour" />
+            type="io.github.manuelernesto.gadsleaderboard.data.model.Learner" />
     </data>
 
     <androidx.cardview.widget.CardView
