--- a/app/src/main/res/layout/submit_project_activity.xml
+++ b/app/src/main/res/layout/submit_project_activity.xml
@@ -182,6 +182,8 @@
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="32dp"
                 android:background="@color/colorCustom"
                 android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -190,14 +192,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/btn_submit" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <!--    <FrameLayout-->
-        <!--        android:id="@+id/container"-->
-        <!--        android:layout_width="match_parent"-->
-        <!--        android:layout_height="0dp"-->
-        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--        app:layout_constraintEnd_toEndOf="parent"-->
-        <!--        app:layout_constraintStart_toStartOf="parent"-->
-        <!--        app:layout_constraintTop_toBottomOf="@+id/toolbar" />-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
