add custom_stroke_btn.xml add custom line

--- a/app/src/main/res/layout/custom_confirm_layout.xml
+++ b/app/src/main/res/layout/custom_confirm_layout.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="Are you sure?"
+        android:text="@string/are_you_sure"
         android:textAlignment="center"
         android:textSize="36sp"
         android:textStyle="bold"
@@ -30,14 +30,22 @@
         app:srcCompat="@drawable/ic_baseline_cancel_24" />
 
     <Button
+        android:textAllCaps="false"
         android:id="@+id/btn_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="100dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="100dp"
-        android:text="Yes"
+        android:background="@drawable/custom_stroke_btn"
+        android:text="@string/yes"
+        android:textColor="@color/colorCustom"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_alert"
-        tools:layout_editor_absoluteX="157dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/txt_alert"
+        app:layout_constraintTop_toBottomOf="@+id/txt_alert" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
