--- a/app/src/main/res/layout/submit_project_activity.xml
+++ b/app/src/main/res/layout/submit_project_activity.xml
@@ -37,7 +37,7 @@
                 tools:layout_editor_absoluteY="28dp">
 
                 <ImageView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:contentDescription="@string/logo"
